# GraphVisualisation

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  _config.yml  index.html  index.md
graphs_from_paper/input/: Figure_16_1.txt  Figure_16_2.txt  Figure_17.txt  Figure_18.txt  Figure_19.txt  Figure_20.txt  Figure_30_1.txt  Figure_30_2.txt  Figure_30_3.txt  Figure_31.txt  Figure_40.txt  Figure_41.txt  Figure_46.txt  Figure_47.txt  Figure_51.txt  Figure_73.txt  Figure_74.txt  Figure_9.txt  test_weight.txt
graphs_from_paper/input/complete_graph/: 100n.txt  10n.txt  12n.txt  14n.txt  16n.txt  19n.txt  20n.txt  30n.txt  40n.txt  4n.txt  50n.txt  7n.txt
graphs_from_paper/input/cyclic_graph/: 100n_c.txt  10n_c.txt  20n_c.txt  256n_c.txt  4n_c.txt  5n_c.txt  6n_c.txt  7n_c.txt  8n_c.txt  9n_c.txt
graphs_from_paper/output/3d_figure/: Figure_16_1_output_3d.html  Figure_16_1_output_3d.txt  Figure_16_1_output_3d_init_cir..txt  Figure_16_1_output_3d_init_cir.html  Figure_16_2_output_3d.html  Figure_16_2_output_3d.txt  Figure_16_2_output_3d_init_cir..txt  Figure_16_2_output_3d_init_cir.html  Figure_17_output_3d.html  Figure_17_output_3d.txt  (+66 more)
input/: 2n  6n.txt  8n.txt
misc/: GenerateGraph.py  Plot interactive graph.ipynb  PlotGraph.py  PlotGraph3d.py  PlotGridGraph.py  PlotInteractiveGraph.py
output/: 8n.txt
output/bf/: 4n_test_1k.txt  6n_test_1k.txt  6n_test_1k_2.txt  8n_test_1k.txt
output/bh/: 4n_test_1h.txt  4n_test_1k.txt  6n_test_1k.txt  6n_test_1k_2.txt  8n_test_1k.txt
src/: algorithm.cpp  algorithm.h  config.h.in  graph.cpp  graph.h  main.cpp  mathVector.h  progressBar.h  tree.h  vertex.h
test/: graph_visualisation_test.cpp
(+108 files in other folders)
